Result ranking overhaul
* Increased position map width to 56 bits
* Optimized queries
* BM25 in the index service's ranking